--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
-# ambiente virtual do Python
 .venv/
-
-# a pasta do frontend
 frontend/
-
-# arquivos de variáveis de ambiente e credenciais
 .env
 google_credentials.json
 
-# arquivos de cache
 __pycache__/
 *.pyc
 
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+
+#depois subir só o modelo
+/backend/model/
+*.pkl
+*.h5
+*.bin
