--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,9 @@ deep-translator
 python-dotenv
 
 # Text-to-Speech (TTS) - Descomente a linha do serviço que você escolher
-# google-cloud-texttospeech
+google-cloud-texttospeech
 # boto3
 # elevenlabs
+
+nltk
+tqdm
